--- a/lottery-web/src/main/resources/templates/index.html
+++ b/lottery-web/src/main/resources/templates/index.html
@@ -171,13 +171,13 @@
 				<!-- 轮播图片 -->
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="https://static.runoob.com/images/mix/img_fjords_wide.jpg">
+						<img src="https://static-pc.0631110.com/xy00009/images_fh/upload/2019/02/1550573590770.jpg">
+					</div>
+					<div class="carousel-item ">
+						<img src="https://static-pc.0631110.com/xy00009/images_fh/upload/2019/01/1547973830185.jpg">
 					</div>
 					<div class="carousel-item">
-						<img src="https://static.runoob.com/images/mix/img_nature_wide.jpg">
-					</div>
-					<div class="carousel-item">
-						<img src="https://static.runoob.com/images/mix/img_mountains_wide.jpg">
+						<img src="https://static-pc.0631110.com/xy00009/images_fh/upload/2019/01/1547973866239.jpg">
 					</div>
 				</div>
 			</div>
