爬虫采集彩票资讯，显示彩票资讯详情

--- a/lottery-admin/src/main/resources/templates/common/header.html
+++ b/lottery-admin/src/main/resources/templates/common/header.html
@@ -24,6 +24,7 @@
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/account-manage'}" v-on:click="navTo('/account-manage')"><a class="nav-link">账号管理</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/invite-code'}" v-on:click="navTo('/invite-code')"><a class="nav-link">邀请码</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/system-notice'}" v-on:click="navTo('/system-notice')"><a class="nav-link">系统公告</a></li>
+				<li class="nav-item" v-bind:class="{'active': currentPathName == '/lottery-information'}" v-on:click="navTo('/lottery-information')"><a class="nav-link">彩票资讯</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/config-manage'}" v-on:click="navTo('/config-manage')"><a class="nav-link">配置项管理</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/dict-manage'}" v-on:click="navTo('/dict-manage')"><a class="nav-link">字典管理</a></li>
 			</ul>
