增加彩票资讯页，可查看过往的彩票资讯

--- a/lottery-web/src/main/resources/templates/common/header.html
+++ b/lottery-web/src/main/resources/templates/common/header.html
@@ -48,7 +48,7 @@
 .homepage-navbar li {
 	padding-bottom: 4px;
 	padding-top: 4px;
-	min-width: 150px;
+	min-width: 130px;
 	text-align: center;
 	cursor: pointer;
 }
@@ -123,6 +123,7 @@
 						<li class="nav-item" v-on:click="goTo('/lottery-result')"><a class="nav-link">开奖结果</a></li>
 						<li class="nav-item"><a class="nav-link">手机购彩</a></li>
 						<li class="nav-item"><a class="nav-link">优惠活动</a></li>
+						<li class="nav-item" v-on:click="goTo('/lottery-information')"><a class="nav-link">彩票资讯</a></li>
 						<li class="nav-item"><a class="nav-link">客服</a></li>
 					</ul>
 				</nav>
